Hotfixed alignment issues within cards on duringWorryTime page and worryTimeSetup page - duringWorryTime.css, worryTimeSetup.css

--- a/src/public/styles/worryTimeSetup.css
+++ b/src/public/styles/worryTimeSetup.css
@@ -89,6 +89,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  width: 85%;
+  text-align: left;
+  overflow-x: hidden;
 }
 
 /* Save button */
